<resources>
    <string name="app_name">Feature Pack</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="OR">Button</string>
    <string name="TODO">TODO</string>
    <string name="Full_Name">Full Name</string>
    <string name="Emil">Email</string>
    <string name="City">City</string>
    <string name="Phone">Phone</string>
    <string name="or">OR</string>
    <string name="Login">login</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="_6_items">6 Items</string>
    <string name="music_player">Music Player</string>
    <string name="calculator">Calculator</string>
    <string name="camera">Camera</string>
    <string name="video_player">Video Player</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="logout">LOGOUT</string>
    <string name="special_function">Special Function</string>
    <string name="_2_item">2 Item</string>
    <string name="back">Back</string>
    <string name="quiz">Quiz</string>
    <string name="magical_music_player">Magical Music Player</string>
    <string name="special_functions">Special Functions</string>
    <string name="Music_player">MUSIC PLAYER</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="Camera">CAMERA</string>
    <string name="capture">Capture</string>
    <string name="enter_your_first_number">Enter your first Number</string>
    <string name="enter_your_second_number">Enter your Second Number</string>
    <string name="result">Result</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="multiply">MULTIPLY</string>
    <string name="send">SEND</string>
    <string name="messege">MESSEGE</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="nolimit">NoLimit</string>
    <string name="depend_on_compiler">Depend on compiler</string>
    <string name="next">next</string>
    <string name="quiz_2">Quiz-2</string>
    <string name="q_2_how_many_main_function_we_can_have_in_our_project">Q-2 How many Main() function we can have in our project ?</string>
    <string name="todo">TODO</string>
</resources>
